Archive/8f37bb9c196e4b0e360d60ead3e03eae-e1204655eaff68246b392dc70c5a32c9/output
+ clang++ -std=c++11 -O3 -march=native -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:13:10: warning: variable length arrays are a C99 feature [-Wvla-extension]
    int c[m];
         ^
main.cpp:29:5: error: no matching function for call to 'force_static_array'
    force_static_array(c);
    ^~~~~~~~~~~~~~~~~~
main.cpp:5:13: note: candidate template ignored: could not match 'const T [N]' against 'int [m]'
inline void force_static_array(const T (&)[N]) {}
            ^
1 warning and 1 error generated.
